fix: add general conditions hrid to plan for automation API
(cherry picked from commit 1f2ef32f1fd7810f5b2ffbbba03f690d04352102)